--- a/docs/404.md
+++ b/docs/404.md
@@ -4,7 +4,7 @@ title: Page Not Found
 permalink: /404.html
 ---
 
-# You Trusted The Dynasty Process...
-## *and it didn't deserve your faith!*
+# You Trusted the Dynasty Process Too Much...
+### *and it didn't deserve your faith!*
 
 The DynastyProcess hasn't created a page here (yet). [Care to go back to the home page?](http://dynastyprocess.com)
