updatez last minute

--- a/docs/_posts/2019-02-14-2019pickvalues.md
+++ b/docs/_posts/2019-02-14-2019pickvalues.md
@@ -45,3 +45,7 @@ Dynasty owners are notorious for valuing picks extremely high, despite their typ
     What about the pesky early firsts that everyone agrees is misplaced?
 
 I've defended trade calculators in many an argument, and at the end of the day my answer has always been the same - it's an approximation of what is considered fair value, but shouldn't be used as the be-all end-all for trade decisions. I also post things openly so that **you can tweak them to your liking - if you think 1.01 is worth where 1.05 is worth, feel free to reference 1.05 wherever you would normally have referenced 1.01. It's a tool that you can adjust however you see fit!**
+
+## Dislike that valuation?
+
+[I've added an Excel workbook to my GitHub that you can play with.](https://github.com/tanho63/dynastyprocess/blob/master/files/values-calculator.xlsx)
